less memory mvn

--- a/docker-compose/mvnbuild/Dockerfile
+++ b/docker-compose/mvnbuild/Dockerfile
@@ -1,11 +1,10 @@
-FROM ubuntu:20.04
+FROM maven:3.5.2-jdk-8-alpine
 
-RUN apt-get update && \
-    apt install -y maven && \
-    apt install -y git;
+RUN apk update && \
+    apk add git
 
 WORKDIR /tmp/project
 
 RUN git clone https://github.com/boxfuse/boxfuse-sample-java-war-hello ./
 
-RUN mvn package
+CMD mvn package
