--- a/ansible-homework/tomcat/Dockerfile
+++ b/ansible-homework/tomcat/Dockerfile
@@ -2,6 +2,6 @@ FROM tomcat:9.0-jre8-alpine
 
 WORKDIR /usr/local/tomcat/webapps/
 
-COPY from to
+COPY /home/alex1945/repo/target/.war .
 
 CMD ["catalina.sh", "run"]
